change day data structure to only have an encrypted dayInfo blob
