# backend/server/api_cervix_service.go
@@ -1,41 +1,0 @@
-/*
- * Cyla App API
- *
- * API for the period tracking app 'Cyla'
- *
- * API version: 0.1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package server
-
-import (
-	"context"
-	"errors"
-	"net/http"
-)
-
-// CervixApiService is a service that implents the logic for the CervixApiServicer
-// This service should implement the business logic for every endpoint for the CervixApi API.
-// Include any external packages or services that will be required by this service.
-type CervixApiService struct {
-}
-
-// NewCervixApiService creates a default api service
-func NewCervixApiService() CervixApiServicer {
-	return &CervixApiService{}
-}
-
-// GetCervixByDate -
-func (s *CervixApiService) GetCervixByDate(ctx context.Context, userId string, date string) (ImplResponse, error) {
-	// TODO - update GetCervixByDate with the required logic for this service method.
-	// Add api_cervix_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, Cervix{}) or use other options such as http.Ok ...
-	//return Response(200, Cervix{}), nil
-
-	//TODO: Uncomment the next line to return response Response(404, {}) or use other options such as http.Ok ...
-	//return Response(404, nil),nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("GetCervixByDate method not implemented")
-}
