# backend/server/api_temperature_service.go
@@ -1,41 +1,0 @@
-/*
- * Cyla App API
- *
- * API for the period tracking app 'Cyla'
- *
- * API version: 0.1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package server
-
-import (
-	"context"
-	"errors"
-	"net/http"
-)
-
-// TemperatureApiService is a service that implents the logic for the TemperatureApiServicer
-// This service should implement the business logic for every endpoint for the TemperatureApi API.
-// Include any external packages or services that will be required by this service.
-type TemperatureApiService struct {
-}
-
-// NewTemperatureApiService creates a default api service
-func NewTemperatureApiService() TemperatureApiServicer {
-	return &TemperatureApiService{}
-}
-
-// GetTemperatureByDate -
-func (s *TemperatureApiService) GetTemperatureByDate(ctx context.Context, userId string, date string) (ImplResponse, error) {
-	// TODO - update GetTemperatureByDate with the required logic for this service method.
-	// Add api_temperature_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, Temperature{}) or use other options such as http.Ok ...
-	//return Response(200, Temperature{}), nil
-
-	//TODO: Uncomment the next line to return response Response(404, {}) or use other options such as http.Ok ...
-	//return Response(404, nil),nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("GetTemperatureByDate method not implemented")
-}
