# backend/server/model_cervical_mucus.go
@@ -1,36 +1,0 @@
-/*
- * Cyla App API
- *
- * API for the period tracking app 'Cyla'
- *
- * API version: 0.1.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package server
-
-// CervicalMucus - Cervical Mucus information for a day
-type CervicalMucus struct {
-
-	// UUID
-	Id string `json:"id,omitempty" mapstructure:"Id"`
-
-	Feeling EncryptedAttribute `json:"feeling,omitempty" mapstructure:"Feeling"`
-
-	Texture EncryptedAttribute `json:"texture,omitempty" mapstructure:"Texture"`
-
-	Exclude EncryptedAttribute `json:"exclude,omitempty" mapstructure:"Exclude"`
-}
-
-func GetCervicalMucusIdName() string {
-	return "Id"
-}
-func GetCervicalMucusFeelingName() string {
-	return "Feeling"
-}
-func GetCervicalMucusTextureName() string {
-	return "Texture"
-}
-func GetCervicalMucusExcludeName() string {
-	return "Exclude"
-}
