# openapi/openapi-specification.yaml
@@ -171,150 +171,6 @@ paths:
           $ref: "#/components/responses/DaysFound"
         "404":
           description: User not found
-  /bleeding/{userId}:
-    get:
-      tags:
-        - bleeding
-      description: Get bleeding information for a day
-      operationId: getBleedingByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Bleeding entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Bleeding"
-        "404":
-          description: User not found
-  /temperature/{userId}:
-    get:
-      tags:
-        - temperature
-      description: Get temperature information for a day
-      operationId: getTemperatureByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Temperature entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Temperature"
-        "404":
-          description: User not found
-  /cervical/{userId}:
-    get:
-      tags:
-        - cervical
-      description: Get cervical information for a day
-      operationId: getCervicalByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Cervical entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CervicalMucus"
-        "404":
-          description: User not found
-  /cervix/{userId}:
-    get:
-      tags:
-        - cervix
-      description: Get cervix information for a day
-      operationId: getCervixByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Cervix entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Cervix"
-        "404":
-          description: User not found
-  /pain/{userId}:
-    get:
-      tags:
-        - pain
-      description: Get pain information for a day
-      operationId: getPainByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Pain entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Pain"
-        "404":
-          description: User not found
-  /mood/{userId}:
-    get:
-      tags:
-        - mood
-      description: Get mood information for a day
-      operationId: getMoodByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Mood entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Mood"
-        "404":
-          description: User not found
-  /sexDesire/{userId}:
-    get:
-      tags:
-        - desire
-      description: Get sexual desire information for a day
-      operationId: getSexDesireByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Desire entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/SexualDesire"
-        "404":
-          description: User not found
-  /sexActivity/{userId}:
-    get:
-      tags:
-        - activity
-      description: Get sexual activity information for a day
-      operationId: getSexActivityByDate
-      parameters:
-        - $ref: "#/components/parameters/userId"
-        - $ref: "#/components/parameters/date"
-      responses:
-        "200":
-          description: Activity entry found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/SexualActivity"
-        "404":
-          description: User not found
 components:
   parameters:
     userId:
@@ -378,101 +234,5 @@ components:
         date:
           format: date
           type: string
-        bleeding:
-          $ref: "#/components/schemas/Bleeding"
-        cervical:
-          $ref: "#/components/schemas/CervicalMucus"
-        cervix:
-          $ref: "#/components/schemas/Cervix"
-        sexActivity:
-          $ref: "#/components/schemas/SexualActivity"
-        sexDesire:
-          $ref: "#/components/schemas/SexualDesire"
-        pain:
-          $ref: "#/components/schemas/Pain"
-        mood:
-          $ref: "#/components/schemas/Mood"
-    Bleeding:
-      type: object
-      description: Bleeding information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        strength:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        exclude:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    Temperature:
-      type: object
-      description: Temperature information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        value:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        timestamp:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        note:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        exclude:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    CervicalMucus:
-      type: object
-      description: Cervical Mucus information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        feeling:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        texture:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        exclude:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    Cervix:
-      type: object
-      description: Cervix information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        opening:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        firmness:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        position:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        excluce:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    Mood:
-      type: object
-      description: Mood information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        type:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    Pain:
-      type: object
-      description: Pain information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        type:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    SexualDesire:
-      type: object
-      description: Sexual desire information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        intensity:
-          $ref: "#/components/schemas/EncryptedAttribute"
-    SexualActivity:
-      type: object
-      description: Sexual activity information for a day
-      properties:
-        id:
-          $ref: "#/components/schemas/Id"
-        type:
-          $ref: "#/components/schemas/EncryptedAttribute"
-        contraceptives:
+        dayInfo:
           $ref: "#/components/schemas/EncryptedAttribute"
